Appending new child to my html using js

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <section id="hudai">
       <h1 class="h1ooo">Just Learning Dom</h1>
       <!-- my fav foods -->
-      <ul>
+      <ul id="food">
         <li class="h1ooo">Pasta</li>
         <li class="h1ooo">Pizza</li>
         <li class="h1ooo">Burger</li>
@@ -72,6 +72,7 @@
     <!-- anta scripts -->
     <!-- <script src="styles/js/scripts.js"></script> -->
 
-    <script src="styles/js/querySelector.js"></script>
+    <!-- <script src="styles/js/querySelector.js"></script> -->
+    <script src="styles/js/child.js"></script>
   </body>
 </html>
