Adding .addEventListener to handle events

--- a/Dom Events/domIvents.html
+++ b/Dom Events/domIvents.html
@@ -16,6 +16,8 @@
       <button onclick="document.body.style.backgroundColor = 'red'">
         make red
       </button>
+      <!-- we will handle this event by event handler -->
+      <button id="make-green-clr">make green</button>
     </main>
     <!-- Option 1 -->
     <script>
